# learning-genie-media-downloader

./: .gitignore  CLAUDE.md  README.md  build_app.py  config.py  download.py  fetch.py  login.py  pyproject.toml  sync.py  update_dashboard.sh
scripts/: download_chat.py  download_home.py
tests/: test_utils.py
